--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,9 @@ services:
     image: ollama/ollama:latest
     container_name: ollama
     restart: unless-stopped
-    ports:
-      - "11434:11434"
+    # No need to expose port publicly — frontend nginx proxies to it
+    expose:
+      - "11434"
     environment:
       - OLLAMA_HOST=0.0.0.0:11434
 
@@ -29,17 +30,17 @@ services:
 
   frontend:
     build:
-      context: ./frontend
+      context: ./react
       dockerfile: Dockerfile
     container_name: valentines_frontend
     restart: unless-stopped
     ports:
-      - "5173:5173"
-    volumes:
-      - ./frontend:/app
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    command: ["/bin/sh", "-lc", "npm install --legacy-peer-deps >/dev/null 2>&1 || true; npm run dev -- --host 0.0.0.0"]
+      - "5173:80"
+    depends_on:
+      - ollama
+    networks:
+      - appnet
+    # no bind-mount: use the built image contents (nginx serves /usr/share/nginx/html)
 
 networks:
   appnet:
